hphp/hack/test/typecheck/reserved_name4.php
<?hh

namespace Foo;

class Noreturn {}
